# serializer version: 1
# name: test_metadata_json_snapshot[Aliens]
  '''
  {
      "KPackageStructure": "KWin/Decoration",
      "KPlugin": {
          "Authors": [
              {
                  "Name": "unknown"
              }
          ],
          "Description": "E16 theme 'Aliens' converted by themey (QML decoration backend)",
          "Id": "themey_Aliens",
          "License": "GPL",
          "Name": "Aliens",
          "Version": "1.0"
      }
  }
  
  '''
# ---
# name: test_metadata_json_snapshot[LiteGnome]
  '''
  {
      "KPackageStructure": "KWin/Decoration",
      "KPlugin": {
          "Authors": [
              {
                  "Name": "unknown"
              }
          ],
          "Description": "E16 theme 'LiteGnome' converted by themey (QML decoration backend)",
          "Id": "themey_LiteGnome",
          "License": "GPL",
          "Name": "LiteGnome",
          "Version": "1.0"
      }
  }
  
  '''
# ---
# name: test_metadata_json_snapshot[Mac3D]
  '''
  {
      "KPackageStructure": "KWin/Decoration",
      "KPlugin": {
          "Authors": [
              {
                  "Name": "unknown"
              }
          ],
          "Description": "E16 theme 'Mac3D' converted by themey (QML decoration backend)",
          "Id": "themey_Mac3D",
          "License": "GPL",
          "Name": "Mac3D",
          "Version": "1.0"
      }
  }
  
  '''
# ---
# name: test_metadata_json_snapshot[OPENSTEP]
  '''
  {
      "KPackageStructure": "KWin/Decoration",
      "KPlugin": {
          "Authors": [
              {
                  "Name": "unknown"
              }
          ],
          "Description": "E16 theme 'OPENSTEP' converted by themey (QML decoration backend)",
          "Id": "themey_OPENSTEP",
          "License": "GPL",
          "Name": "OPENSTEP",
          "Version": "1.0"
      }
  }
  
  '''
# ---
# name: test_metadata_json_snapshot[e13]
  '''
  {
      "KPackageStructure": "KWin/Decoration",
      "KPlugin": {
          "Authors": [
              {
                  "Name": "unknown"
              }
          ],
          "Description": "E16 theme 'e13' converted by themey (QML decoration backend)",
          "Id": "themey_e13",
          "License": "GPL",
          "Name": "e13",
          "Version": "1.0"
      }
  }
  
  '''
# ---
# name: test_theme_js_snapshot[Aliens]
  '''
  // Generated by themey — QML decoration data (runtime v2).
  // Pure data: imported by main.qml as ThemeData; no runtime I/O.
  var theme = {
    "borders": {
      "bottom": 50,
      "left": 70,
      "right": 40,
      "top": 60
    },
    "fonts": [],
    "name": "Aliens",
    "parts": [
      {
        "brOrigin": -1,
        "brXA": 152,
        "brXP": 0,
        "brYA": 15,
        "brYP": 0,
        "button": "minimize",
        "hideWhenMaximized": false,
        "id": "BUTTON_ICONIFY",
        "images": {
          "hover": "../images/button_iconify_normal.png",
          "hoverActive": "../images/button_iconify_normal_active.png",
          "normal": "../images/button_iconify_normal.png",
          "normalActive": "../images/button_iconify_normal_active.png",
          "pressed": "../images/button_iconify_clicked.png",
          "pressedActive": "../images/button_iconify_clicked_active.png",
          "toggled": "../images/button_iconify_normal_sticky.png",
          "toggledActive": "../images/button_iconify_normal_active_sticky.png"
        },
        "insets": {
          "bottom": 4,
          "left": 4,
          "right": 4,
          "top": 4
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": true,
        "maxH": 12,
        "maxW": 12,
        "minH": 12,
        "minW": 12,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": 140,
        "tlXP": 0,
        "tlYA": 3,
        "tlYP": 0,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": 138,
        "brXP": 0,
        "brYA": 15,
        "brYP": 0,
        "button": "maximizeRestore",
        "hideWhenMaximized": false,
        "id": "BUTTON_MAXIMIZE",
        "images": {
          "hover": "../images/button_maximize_normal.png",
          "hoverActive": "../images/button_maximize_normal_active.png",
          "normal": "../images/button_maximize_normal.png",
          "normalActive": "../images/button_maximize_normal_active.png",
          "pressed": "../images/button_maximize_clicked.png",
          "pressedActive": "../images/button_maximize_clicked_active.png",
          "toggled": "../images/button_maximize_normal_sticky.png",
          "toggledActive": "../images/button_maximize_normal_active_sticky.png"
        },
        "insets": {
          "bottom": 4,
          "left": 4,
          "right": 4,
          "top": 4
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": true,
        "maxH": 11,
        "maxW": 20,
        "minH": 11,
        "minW": 20,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": 118,
        "tlXP": 0,
        "tlYA": 3,
        "tlYP": 0,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": -27,
        "brXP": 1024,
        "brYA": 16,
        "brYP": 0,
        "button": null,
        "hideWhenMaximized": false,
        "id": "TITLE_BAR_HORIZONTAL",
        "images": {
          "normal": "../images/title_bar_horizontal_normal.png",
          "normalActive": "../images/title_bar_horizontal_normal_active.png"
        },
        "insets": {
          "bottom": 4,
          "left": 6,
          "right": 4,
          "top": 6
        },
        "isTitle": true,
        "justification": 512,
        "keepWhenShaded": true,
        "maxH": 13,
        "maxW": 99999,
        "minH": 13,
        "minW": 4,
        "padBottom": 1,
        "padLeft": 2,
        "padRight": 2,
        "padTop": 1,
        "text": {
          "colorActive": "#ffffc8",
          "colorNormal": "#c8c896",
          "fontIndex": -1,
          "pixelSize": 20,
          "shadow": true,
          "shadowColor": "#000000"
        },
        "tlOrigin": -1,
        "tlXA": 153,
        "tlXP": 0,
        "tlYA": 3,
        "tlYP": 0,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": -15,
        "brXP": 1024,
        "brYA": -17,
        "brYP": 1024,
        "button": null,
        "hideWhenMaximized": true,
        "id": "BUTTONR",
        "images": {
          "normal": "../images/buttonr_normal.png",
          "normalActive": "../images/buttonr_normal_active.png"
        },
        "insets": {
          "bottom": 4,
          "left": 4,
          "right": 4,
          "top": 4
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": false,
        "maxH": 99999,
        "maxW": 4,
        "minH": 0,
        "minW": 4,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": -20,
        "tlXP": 1024,
        "tlYA": 30,
        "tlYP": 0,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": 35,
        "brXP": 0,
        "brYA": -17,
        "brYP": 1024,
        "button": null,
        "hideWhenMaximized": true,
        "id": "BUTTONL",
        "images": {
          "normal": "../images/buttonl_normal.png",
          "normalActive": "../images/buttonl_normal_active.png"
        },
        "insets": {
          "bottom": 4,
          "left": 4,
          "right": 2,
          "top": 4
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": false,
        "maxH": 99999,
        "maxW": 5,
        "minH": 0,
        "minW": 5,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": 30,
        "tlXP": 0,
        "tlYA": 35,
        "tlYP": 0,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": -17,
        "brXP": 1024,
        "brYA": -20,
        "brYP": 1024,
        "button": null,
        "hideWhenMaximized": true,
        "id": "BUTTONB",
        "images": {
          "normal": "../images/buttonb_normal.png",
          "normalActive": "../images/buttonb_normal_active.png"
        },
        "insets": {
          "bottom": 4,
          "left": 4,
          "right": 4,
          "top": 4
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": false,
        "maxH": 5,
        "maxW": 99999,
        "minH": 5,
        "minW": 0,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": 35,
        "tlXP": 0,
        "tlYA": -25,
        "tlYP": 1024,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": 68,
        "brXP": 0,
        "brYA": -130,
        "brYP": 1024,
        "button": null,
        "hideWhenMaximized": true,
        "id": "CORNER_BL",
        "images": {
          "normal": "../images/corner_bl_normal.png",
          "normalActive": "../images/corner_bl_normal_active.png"
        },
        "insets": {
          "bottom": 4,
          "left": 4,
          "right": 4,
          "top": 4
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": false,
        "maxH": 60,
        "maxW": 45,
        "minH": 60,
        "minW": 45,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": 23,
        "tlXP": 0,
        "tlYA": -70,
        "tlYP": 1024,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": 124,
        "brXP": 0,
        "brYA": 179,
        "brYP": 0,
        "button": null,
        "hideWhenMaximized": true,
        "id": "CORNER_TL",
        "images": {
          "normal": "../images/corner_tl_normal.png",
          "normalActive": "../images/corner_tl_normal_active.png"
        },
        "insets": {
          "bottom": 4,
          "left": 4,
          "right": 4,
          "top": 4
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": false,
        "maxH": 179,
        "maxW": 124,
        "minH": 179,
        "minW": 124,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": 0,
        "tlXP": 0,
        "tlYA": 0,
        "tlYP": 0,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": -17,
        "brXP": 1024,
        "brYA": 32,
        "brYP": 0,
        "button": null,
        "hideWhenMaximized": true,
        "id": "BUTTONT",
        "images": {
          "normal": "../images/buttont_normal.png",
          "normalActive": "../images/buttont_normal_active.png"
        },
        "insets": {
          "bottom": 4,
          "left": 4,
          "right": 4,
          "top": 4
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": false,
        "maxH": 4,
        "maxW": 99999,
        "minH": 4,
        "minW": 0,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": 35,
        "tlXP": 0,
        "tlYA": 28,
        "tlYP": 0,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": 22,
        "brXP": 0,
        "brYA": 58,
        "brYP": 0,
        "button": "close",
        "hideWhenMaximized": true,
        "id": "BUTTON_KILL",
        "images": {
          "hover": "../images/button_kill_normal.png",
          "hoverActive": "../images/button_kill_normal_active.png",
          "normal": "../images/button_kill_normal.png",
          "normalActive": "../images/button_kill_normal_active.png",
          "pressed": "../images/button_kill_clicked.png",
          "pressedActive": "../images/button_kill_clicked_active.png",
          "toggled": "../images/button_kill_normal_sticky.png",
          "toggledActive": "../images/button_kill_normal_active_sticky.png"
        },
        "insets": {
          "bottom": 4,
          "left": 4,
          "right": 4,
          "top": 4
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": false,
        "maxH": 12,
        "maxW": 11,
        "minH": 12,
        "minW": 11,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": 11,
        "tlXP": 0,
        "tlYA": 46,
        "tlYP": 0,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": -3,
        "brXP": 0,
        "brYA": 66,
        "brYP": 0,
        "button": null,
        "hideWhenMaximized": true,
        "id": "CORNER_TR",
        "images": {
          "normal": "../images/corner_tr_normal.png",
          "normalActive": "../images/corner_tr_normal_active.png"
        },
        "insets": {
          "bottom": 4,
          "left": 4,
          "right": 4,
          "top": 4
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": false,
        "maxH": 61,
        "maxW": 65,
        "minH": 61,
        "minW": 65,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": -68,
        "tlXP": 1024,
        "tlYA": 5,
        "tlYP": 0,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": 0,
        "brXP": 1024,
        "brYA": -1,
        "brYP": 1024,
        "button": null,
        "hideWhenMaximized": true,
        "id": "CORNER_BR",
        "images": {
          "normal": "../images/corner_br_normal.png",
          "normalActive": "../images/corner_br_normal_active.png"
        },
        "insets": {
          "bottom": 4,
          "left": 4,
          "right": 4,
          "top": 4
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": false,
        "maxH": 84,
        "maxW": 43,
        "minH": 84,
        "minW": 43,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": -42,
        "tlXP": 1024,
        "tlYA": -109,
        "tlYP": 1024,
        "vertical": false
      }
    ],
    "runtimeVersion": 2,
    "scale": 2
  };
  
  '''
# ---
# name: test_theme_js_snapshot[LiteGnome]
  '''
  // Generated by themey — QML decoration data (runtime v2).
  // Pure data: imported by main.qml as ThemeData; no runtime I/O.
  var theme = {
    "borders": {
      "bottom": 12,
      "left": 2,
      "right": 2,
      "top": 36
    },
    "fonts": [
      {
        "bold": false,
        "family": "Silkscreen",
        "italic": false,
        "source": "../fonts/slkscr.ttf"
      }
    ],
    "name": "LiteGnome",
    "parts": [
      {
        "brOrigin": -1,
        "brXA": -1,
        "brXP": 1024,
        "brYA": 18,
        "brYP": 0,
        "button": null,
        "hideWhenMaximized": false,
        "id": "Lite_top",
        "images": {
          "normal": "../images/lite_top_normal.png",
          "normalActive": "../images/lite_top_normal.png"
        },
        "insets": {
          "bottom": 4,
          "left": 4,
          "right": 4,
          "top": 4
        },
        "isTitle": true,
        "justification": 512,
        "keepWhenShaded": true,
        "maxH": 18,
        "maxW": 99999,
        "minH": 18,
        "minW": 4,
        "padBottom": 5,
        "padLeft": 30,
        "padRight": 30,
        "padTop": 5,
        "text": {
          "colorActive": "#ffffff",
          "colorNormal": "#000000",
          "fontIndex": 0,
          "pixelSize": 12,
          "shadow": false,
          "shadowColor": "#000000"
        },
        "tlOrigin": -1,
        "tlXA": 0,
        "tlXP": 0,
        "tlYA": 0,
        "tlYP": 0,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": 16,
        "brXP": 0,
        "brYA": 15,
        "brYP": 0,
        "button": "minimize",
        "hideWhenMaximized": false,
        "id": "Lite_minimize",
        "images": {
          "hover": "../images/lite_minimize_normal.png",
          "hoverActive": "../images/lite_minimize_normal.png",
          "normal": "../images/lite_minimize_normal.png",
          "normalActive": "../images/lite_minimize_normal.png",
          "pressed": "../images/lite_minimize_normal.png",
          "pressedActive": "../images/lite_minimize_normal.png",
          "toggled": "../images/lite_minimize_normal.png",
          "toggledActive": "../images/lite_minimize_normal.png"
        },
        "insets": {
          "bottom": 10,
          "left": 10,
          "right": 10,
          "top": 10
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": true,
        "maxH": 10,
        "maxW": 10,
        "minH": 10,
        "minW": 10,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": 6,
        "tlXP": 0,
        "tlYA": 5,
        "tlYP": 0,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": 28,
        "brXP": 0,
        "brYA": 15,
        "brYP": 0,
        "button": "maximizeRestore",
        "hideWhenMaximized": false,
        "id": "Lite_maximize",
        "images": {
          "hover": "../images/lite_maximize_normal.png",
          "hoverActive": "../images/lite_maximize_normal.png",
          "normal": "../images/lite_maximize_normal.png",
          "normalActive": "../images/lite_maximize_normal.png",
          "pressed": "../images/lite_maximize_normal.png",
          "pressedActive": "../images/lite_maximize_normal.png",
          "toggled": "../images/lite_maximize_normal.png",
          "toggledActive": "../images/lite_maximize_normal.png"
        },
        "insets": {
          "bottom": 10,
          "left": 10,
          "right": 10,
          "top": 10
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": true,
        "maxH": 10,
        "maxW": 10,
        "minH": 10,
        "minW": 10,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": 18,
        "tlXP": 0,
        "tlYA": 5,
        "tlYP": 0,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": -5,
        "brXP": 1024,
        "brYA": 15,
        "brYP": 0,
        "button": "close",
        "hideWhenMaximized": false,
        "id": "Lite_close",
        "images": {
          "hover": "../images/lite_close_normal.png",
          "hoverActive": "../images/lite_close_normal.png",
          "normal": "../images/lite_close_normal.png",
          "normalActive": "../images/lite_close_normal.png",
          "pressed": "../images/lite_close_normal.png",
          "pressedActive": "../images/lite_close_normal.png",
          "toggled": "../images/lite_close_normal.png",
          "toggledActive": "../images/lite_close_normal.png"
        },
        "insets": {
          "bottom": 10,
          "left": 10,
          "right": 10,
          "top": 10
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": true,
        "maxH": 10,
        "maxW": 10,
        "minH": 10,
        "minW": 10,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": -15,
        "tlXP": 1024,
        "tlYA": 5,
        "tlYP": 0,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": 1,
        "brXP": 0,
        "brYA": -6,
        "brYP": 1024,
        "button": null,
        "hideWhenMaximized": true,
        "id": "Lite_side",
        "images": {
          "normal": "../images/lite_side_normal.png",
          "normalActive": "../images/lite_side_normal.png"
        },
        "insets": {
          "bottom": 0,
          "left": 0,
          "right": 0,
          "top": 0
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": false,
        "maxH": 99999,
        "maxW": 1,
        "minH": 1,
        "minW": 1,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": 0,
        "tlXP": 0,
        "tlYA": 16,
        "tlYP": 0,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": 0,
        "brXP": 1024,
        "brYA": -6,
        "brYP": 1024,
        "button": null,
        "hideWhenMaximized": true,
        "id": "Lite_side",
        "images": {
          "normal": "../images/lite_side_normal.png",
          "normalActive": "../images/lite_side_normal.png"
        },
        "insets": {
          "bottom": 0,
          "left": 0,
          "right": 0,
          "top": 0
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": false,
        "maxH": 99999,
        "maxW": 1,
        "minH": 1,
        "minW": 1,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": -1,
        "tlXP": 1024,
        "tlYA": 16,
        "tlYP": 0,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": 16,
        "brXP": 0,
        "brYA": -1,
        "brYP": 1024,
        "button": null,
        "hideWhenMaximized": true,
        "id": "Lite_bottom",
        "images": {
          "normal": "../images/lite_bottom_normal.png",
          "normalActive": "../images/lite_bottom_normal.png"
        },
        "insets": {
          "bottom": 4,
          "left": 4,
          "right": 4,
          "top": 4
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": false,
        "maxH": 6,
        "maxW": 16,
        "minH": 6,
        "minW": 16,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": 0,
        "tlXP": 0,
        "tlYA": -6,
        "tlYP": 1024,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": -1,
        "brXP": 1024,
        "brYA": -1,
        "brYP": 1024,
        "button": null,
        "hideWhenMaximized": true,
        "id": "Lite_bottom",
        "images": {
          "normal": "../images/lite_bottom_normal.png",
          "normalActive": "../images/lite_bottom_normal.png"
        },
        "insets": {
          "bottom": 4,
          "left": 4,
          "right": 4,
          "top": 4
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": false,
        "maxH": 6,
        "maxW": 99999,
        "minH": 6,
        "minW": 6,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": -16,
        "tlXP": 1024,
        "tlYA": -6,
        "tlYP": 1024,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": -16,
        "brXP": 1024,
        "brYA": -1,
        "brYP": 1024,
        "button": null,
        "hideWhenMaximized": true,
        "id": "Lite_bottom",
        "images": {
          "normal": "../images/lite_bottom_normal.png",
          "normalActive": "../images/lite_bottom_normal.png"
        },
        "insets": {
          "bottom": 4,
          "left": 4,
          "right": 4,
          "top": 4
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": false,
        "maxH": 6,
        "maxW": 99999,
        "minH": 6,
        "minW": 6,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": 15,
        "tlXP": 0,
        "tlYA": -6,
        "tlYP": 1024,
        "vertical": false
      }
    ],
    "runtimeVersion": 2,
    "scale": 2
  };
  
  '''
# ---
# name: test_theme_js_snapshot[Mac3D]
  '''
  // Generated by themey — QML decoration data (runtime v2).
  // Pure data: imported by main.qml as ThemeData; no runtime I/O.
  var theme = {
    "borders": {
      "bottom": 16,
      "left": 8,
      "right": 8,
      "top": 40
    },
    "fonts": [
      {
        "bold": false,
        "family": "UniversityRoman",
        "italic": false,
        "source": "../fonts/univers0.ttf"
      }
    ],
    "name": "Mac3D",
    "parts": [
      {
        "brOrigin": -1,
        "brXA": 19,
        "brXP": 0,
        "brYA": 19,
        "brYP": 0,
        "button": null,
        "hideWhenMaximized": false,
        "id": "DEFAULT_BORDER_TITLE_LEFT",
        "images": {
          "normal": "../images/default_border_title_left_normal.png",
          "normalActive": "../images/default_border_title_left_normal_active.png"
        },
        "insets": {
          "bottom": 10,
          "left": 10,
          "right": 10,
          "top": 10
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": true,
        "maxH": 20,
        "maxW": 20,
        "minH": 20,
        "minW": 20,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": 0,
        "tlXP": 0,
        "tlYA": 0,
        "tlYP": 0,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": -39,
        "brXP": 1024,
        "brYA": 19,
        "brYP": 0,
        "button": null,
        "hideWhenMaximized": false,
        "id": "DEFAULT_BORDER_TITLE_BACK",
        "images": {
          "normal": "../images/default_border_title_back_normal.png",
          "normalActive": "../images/default_border_title_back_normal_active.png"
        },
        "insets": {
          "bottom": 4,
          "left": 12,
          "right": 12,
          "top": 4
        },
        "isTitle": true,
        "justification": 512,
        "keepWhenShaded": true,
        "maxH": 20,
        "maxW": 9999,
        "minH": 20,
        "minW": 20,
        "padBottom": 6,
        "padLeft": 10,
        "padRight": 10,
        "padTop": 4,
        "text": {
          "colorActive": "#000000",
          "colorNormal": "#000000",
          "fontIndex": 0,
          "pixelSize": 22,
          "shadow": true,
          "shadowColor": "#000000"
        },
        "tlOrigin": -1,
        "tlXA": 19,
        "tlXP": 0,
        "tlYA": 0,
        "tlYP": 0,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": -1,
        "brXP": 1024,
        "brYA": 19,
        "brYP": 0,
        "button": null,
        "hideWhenMaximized": false,
        "id": "DEFAULT_BORDER_TITLE_RHT",
        "images": {
          "normal": "../images/default_border_title_rht_normal.png",
          "normalActive": "../images/default_border_title_rht_normal_active.png"
        },
        "insets": {
          "bottom": 10,
          "left": 10,
          "right": 10,
          "top": 10
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": true,
        "maxH": 20,
        "maxW": 60,
        "minH": 20,
        "minW": 20,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": -38,
        "tlXP": 1024,
        "tlYA": 0,
        "tlYP": 0,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": 18,
        "brXP": 0,
        "brYA": 18,
        "brYP": 0,
        "button": "close",
        "hideWhenMaximized": false,
        "id": "WIDGET_KILL",
        "images": {
          "hover": "../images/widget_kill_hilited.png",
          "hoverActive": "../images/widget_kill_hilited_active.png",
          "normal": "../images/widget_kill_normal.png",
          "normalActive": "../images/widget_kill_normal_active.png",
          "pressed": "../images/widget_kill_clicked.png",
          "pressedActive": "../images/widget_kill_clicked_active.png",
          "toggled": "../images/widget_kill_normal_sticky.png",
          "toggledActive": "../images/widget_kill_normal_active_sticky.png"
        },
        "insets": {
          "bottom": 4,
          "left": 4,
          "right": 4,
          "top": 4
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": true,
        "maxH": 16,
        "maxW": 16,
        "minH": 16,
        "minW": 16,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": 2,
        "tlXP": 0,
        "tlYA": 2,
        "tlYP": 0,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": -3,
        "brXP": 1024,
        "brYA": 18,
        "brYP": 0,
        "button": "minimize",
        "hideWhenMaximized": false,
        "id": "WIDGET_ICONIFY",
        "images": {
          "hover": "../images/widget_iconify_hilited.png",
          "hoverActive": "../images/widget_iconify_hilited_active.png",
          "normal": "../images/widget_iconify_normal.png",
          "normalActive": "../images/widget_iconify_normal_active.png",
          "pressed": "../images/widget_iconify_clicked.png",
          "pressedActive": "../images/widget_iconify_clicked_active.png",
          "toggled": "../images/widget_iconify_normal_sticky.png",
          "toggledActive": "../images/widget_iconify_normal_active_sticky.png"
        },
        "insets": {
          "bottom": 4,
          "left": 4,
          "right": 4,
          "top": 4
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": true,
        "maxH": 16,
        "maxW": 16,
        "minH": 16,
        "minW": 16,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": -19,
        "tlXP": 1024,
        "tlYA": 2,
        "tlYP": 0,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": -20,
        "brXP": 1024,
        "brYA": 18,
        "brYP": 0,
        "button": "maximizeRestore",
        "hideWhenMaximized": false,
        "id": "WIDGET_MAX",
        "images": {
          "hover": "../images/widget_max_hilited.png",
          "hoverActive": "../images/widget_max_hilited_active.png",
          "normal": "../images/widget_max_normal.png",
          "normalActive": "../images/widget_max_normal_active.png",
          "pressed": "../images/widget_max_clicked.png",
          "pressedActive": "../images/widget_max_clicked_active.png",
          "toggled": "../images/widget_max_normal_sticky.png",
          "toggledActive": "../images/widget_max_normal_active_sticky.png"
        },
        "insets": {
          "bottom": 4,
          "left": 4,
          "right": 4,
          "top": 4
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": true,
        "maxH": 16,
        "maxW": 16,
        "minH": 16,
        "minW": 16,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": -36,
        "tlXP": 1024,
        "tlYA": 2,
        "tlYP": 0,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": -1,
        "brXP": 1024,
        "brYA": -1,
        "brYP": 1024,
        "button": null,
        "hideWhenMaximized": true,
        "id": "DEFAULT_BORDER_BOT",
        "images": {
          "normal": "../images/default_border_bot_normal.png",
          "normalActive": "../images/default_border_bot_normal_active.png"
        },
        "insets": {
          "bottom": 2,
          "left": 6,
          "right": 6,
          "top": 2
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": false,
        "maxH": 8,
        "maxW": 9999,
        "minH": 8,
        "minW": 10,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": 0,
        "tlXP": 0,
        "tlYA": -8,
        "tlYP": 1024,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": 12,
        "brXP": 0,
        "brYA": -1,
        "brYP": 1024,
        "button": null,
        "hideWhenMaximized": true,
        "id": "DEFAULT_BORDER_BL_WIDGET",
        "images": {
          "normal": "../images/default_border_bl_widget_normal.png",
          "normalActive": "../images/default_border_bl_widget_normal_active.png"
        },
        "insets": {
          "bottom": 4,
          "left": 4,
          "right": 4,
          "top": 4
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": false,
        "maxH": 8,
        "maxW": 12,
        "minH": 8,
        "minW": 12,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": 0,
        "tlXP": 0,
        "tlYA": -8,
        "tlYP": 1024,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": -1,
        "brXP": 1024,
        "brYA": -1,
        "brYP": 1024,
        "button": null,
        "hideWhenMaximized": true,
        "id": "DEFAULT_BORDER_BR_WIDGET",
        "images": {
          "normal": "../images/default_border_br_widget_normal.png",
          "normalActive": "../images/default_border_br_widget_normal_active.png"
        },
        "insets": {
          "bottom": 4,
          "left": 4,
          "right": 4,
          "top": 4
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": false,
        "maxH": 8,
        "maxW": 12,
        "minH": 8,
        "minW": 12,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": -12,
        "tlXP": 1024,
        "tlYA": -8,
        "tlYP": 1024,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": 4,
        "brXP": 0,
        "brYA": -8,
        "brYP": 1024,
        "button": null,
        "hideWhenMaximized": true,
        "id": "DEFAULT_BORDER_LFT",
        "images": {
          "normal": "../images/default_border_lft_normal.png",
          "normalActive": "../images/default_border_lft_normal_active.png"
        },
        "insets": {
          "bottom": 2,
          "left": 2,
          "right": 2,
          "top": 2
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": false,
        "maxH": 9999,
        "maxW": 4,
        "minH": 20,
        "minW": 4,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": 0,
        "tlXP": 0,
        "tlYA": 19,
        "tlYP": 0,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": -1,
        "brXP": 1024,
        "brYA": -8,
        "brYP": 1024,
        "button": null,
        "hideWhenMaximized": true,
        "id": "DEFAULT_BORDER_RHT",
        "images": {
          "normal": "../images/default_border_rht_normal.png",
          "normalActive": "../images/default_border_rht_normal_active.png"
        },
        "insets": {
          "bottom": 2,
          "left": 2,
          "right": 2,
          "top": 2
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": false,
        "maxH": 9999,
        "maxW": 4,
        "minH": 20,
        "minW": 4,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": -4,
        "tlXP": 1024,
        "tlYA": 19,
        "tlYP": 0,
        "vertical": false
      }
    ],
    "runtimeVersion": 2,
    "scale": 2
  };
  
  '''
# ---
# name: test_theme_js_snapshot[OPENSTEP]
  '''
  // Generated by themey — QML decoration data (runtime v2).
  // Pure data: imported by main.qml as ThemeData; no runtime I/O.
  var theme = {
    "borders": {
      "bottom": 20,
      "left": 2,
      "right": 2,
      "top": 44
    },
    "fonts": [],
    "name": "OPENSTEP",
    "parts": [
      {
        "brOrigin": -1,
        "brXA": -43,
        "brXP": 1024,
        "brYA": 21,
        "brYP": 0,
        "button": null,
        "hideWhenMaximized": false,
        "id": "TITLE_BAR",
        "images": {
          "normal": "../images/title_bar_normal.png",
          "normalActive": "../images/title_bar_normal_active.png"
        },
        "insets": {
          "bottom": 4,
          "left": 4,
          "right": 6,
          "top": 4
        },
        "isTitle": true,
        "justification": 0,
        "keepWhenShaded": true,
        "maxH": 22,
        "maxW": 99999,
        "minH": 22,
        "minW": 2,
        "padBottom": 4,
        "padLeft": 10,
        "padRight": 4,
        "padTop": 4,
        "text": {
          "colorActive": "#ffffff",
          "colorNormal": "#000000",
          "fontIndex": -1,
          "pixelSize": 24,
          "shadow": false,
          "shadowColor": "#000000"
        },
        "tlOrigin": -1,
        "tlXA": 0,
        "tlXP": 0,
        "tlYA": 0,
        "tlYP": 0,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": 1,
        "brXP": 0,
        "brYA": -11,
        "brYP": 1024,
        "button": null,
        "hideWhenMaximized": true,
        "id": "BORDER_PIXEL",
        "images": {
          "normal": "../images/border_pixel_normal.png",
          "normalActive": "../images/border_pixel_normal.png"
        },
        "insets": {
          "bottom": 0,
          "left": 0,
          "right": 0,
          "top": 0
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": false,
        "maxH": 99999,
        "maxW": 1,
        "minH": 0,
        "minW": 1,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": 0,
        "tlXP": 0,
        "tlYA": 22,
        "tlYP": 0,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": -1,
        "brXP": 1024,
        "brYA": -11,
        "brYP": 1024,
        "button": null,
        "hideWhenMaximized": true,
        "id": "BORDER_PIXEL",
        "images": {
          "normal": "../images/border_pixel_normal.png",
          "normalActive": "../images/border_pixel_normal.png"
        },
        "insets": {
          "bottom": 0,
          "left": 0,
          "right": 0,
          "top": 0
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": false,
        "maxH": 99999,
        "maxW": 1,
        "minH": 0,
        "minW": 1,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": -1,
        "tlXP": 1024,
        "tlYA": 22,
        "tlYP": 0,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": 21,
        "brXP": 0,
        "brYA": 21,
        "brYP": 0,
        "button": "minimize",
        "hideWhenMaximized": false,
        "id": "ICONIFY_BUTTON",
        "images": {
          "hover": "../images/iconify_button_normal.png",
          "hoverActive": "../images/iconify_button_normal_active.png",
          "normal": "../images/iconify_button_normal.png",
          "normalActive": "../images/iconify_button_normal_active.png",
          "pressed": "../images/iconify_button_clicked.png",
          "pressedActive": "../images/iconify_button_clicked_active.png",
          "toggled": "../images/iconify_button_normal_sticky.png",
          "toggledActive": "../images/iconify_button_normal_active_sticky.png"
        },
        "insets": {
          "bottom": 0,
          "left": 0,
          "right": 0,
          "top": 0
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": true,
        "maxH": 22,
        "maxW": 22,
        "minH": 22,
        "minW": 22,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": -43,
        "tlXP": 1024,
        "tlYA": 0,
        "tlYP": 0,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": -1,
        "brXP": 1024,
        "brYA": 21,
        "brYP": 0,
        "button": "close",
        "hideWhenMaximized": false,
        "id": "KILL_BUTTON",
        "images": {
          "hover": "../images/kill_button_normal.png",
          "hoverActive": "../images/kill_button_normal_active.png",
          "normal": "../images/kill_button_normal.png",
          "normalActive": "../images/kill_button_normal_active.png",
          "pressed": "../images/kill_button_clicked.png",
          "pressedActive": "../images/kill_button_clicked_active.png",
          "toggled": "../images/kill_button_normal_sticky.png",
          "toggledActive": "../images/kill_button_normal_active_sticky.png"
        },
        "insets": {
          "bottom": 0,
          "left": 0,
          "right": 0,
          "top": 0
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": true,
        "maxH": 22,
        "maxW": 22,
        "minH": 22,
        "minW": 22,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": -22,
        "tlXP": 1024,
        "tlYA": 0,
        "tlYP": 0,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": 27,
        "brXP": 0,
        "brYA": -1,
        "brYP": 1024,
        "button": null,
        "hideWhenMaximized": true,
        "id": "RESIZE_BAR",
        "images": {
          "normal": "../images/resize_bar_normal.png",
          "normalActive": "../images/resize_bar_normal.png"
        },
        "insets": {
          "bottom": 4,
          "left": 4,
          "right": 6,
          "top": 4
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": false,
        "maxH": 10,
        "maxW": 28,
        "minH": 10,
        "minW": 28,
        "padBottom": 4,
        "padLeft": 2,
        "padRight": 2,
        "padTop": 4,
        "text": null,
        "tlOrigin": -1,
        "tlXA": 0,
        "tlXP": 0,
        "tlYA": -10,
        "tlYP": 1024,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": -28,
        "brXP": 1024,
        "brYA": -1,
        "brYP": 1024,
        "button": null,
        "hideWhenMaximized": true,
        "id": "RESIZE_BAR",
        "images": {
          "normal": "../images/resize_bar_normal.png",
          "normalActive": "../images/resize_bar_normal.png"
        },
        "insets": {
          "bottom": 4,
          "left": 4,
          "right": 6,
          "top": 4
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": false,
        "maxH": 10,
        "maxW": 99999,
        "minH": 10,
        "minW": 2,
        "padBottom": 4,
        "padLeft": 2,
        "padRight": 2,
        "padTop": 4,
        "text": null,
        "tlOrigin": -1,
        "tlXA": 27,
        "tlXP": 0,
        "tlYA": -10,
        "tlYP": 1024,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": -1,
        "brXP": 1024,
        "brYA": -1,
        "brYP": 1024,
        "button": null,
        "hideWhenMaximized": true,
        "id": "RESIZE_BAR",
        "images": {
          "normal": "../images/resize_bar_normal.png",
          "normalActive": "../images/resize_bar_normal.png"
        },
        "insets": {
          "bottom": 4,
          "left": 4,
          "right": 6,
          "top": 4
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": false,
        "maxH": 10,
        "maxW": 28,
        "minH": 10,
        "minW": 28,
        "padBottom": 4,
        "padLeft": 2,
        "padRight": 2,
        "padTop": 4,
        "text": null,
        "tlOrigin": -1,
        "tlXA": -28,
        "tlXP": 1024,
        "tlYA": -10,
        "tlYP": 1024,
        "vertical": false
      }
    ],
    "runtimeVersion": 2,
    "scale": 2
  };
  
  '''
# ---
# name: test_theme_js_snapshot[e13]
  '''
  // Generated by themey — QML decoration data (runtime v2).
  // Pure data: imported by main.qml as ThemeData; no runtime I/O.
  var theme = {
    "borders": {
      "bottom": 12,
      "left": 80,
      "right": 12,
      "top": 92
    },
    "fonts": [
      {
        "bold": false,
        "family": "Arial",
        "italic": true,
        "source": "../fonts/ariali.ttf"
      }
    ],
    "name": "e13",
    "parts": [
      {
        "brOrigin": -1,
        "brXA": 40,
        "brXP": 0,
        "brYA": 38,
        "brYP": 0,
        "button": "close",
        "hideWhenMaximized": false,
        "id": "BUTTON_KILL",
        "images": {
          "hover": "../images/button_kill_hilited.png",
          "hoverActive": "../images/button_kill_hilited_active.png",
          "normal": "../images/button_kill_normal.png",
          "normalActive": "../images/button_kill_normal_active.png",
          "pressed": "../images/button_kill_clicked.png",
          "pressedActive": "../images/button_kill_clicked_active.png",
          "toggled": "../images/button_kill_normal_sticky.png",
          "toggledActive": "../images/button_kill_normal_active_sticky.png"
        },
        "insets": {
          "bottom": 4,
          "left": 4,
          "right": 4,
          "top": 4
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": true,
        "maxH": 38,
        "maxW": 40,
        "minH": 38,
        "minW": 40,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": 0,
        "tlXP": 0,
        "tlYA": 0,
        "tlYP": 0,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": 40,
        "brXP": 0,
        "brYA": 83,
        "brYP": 0,
        "button": "minimize",
        "hideWhenMaximized": true,
        "id": "BUTTON_ICONIFY",
        "images": {
          "hover": "../images/button_iconify_hilited.png",
          "hoverActive": "../images/button_iconify_hilited_active.png",
          "normal": "../images/button_iconify_normal.png",
          "normalActive": "../images/button_iconify_normal_active.png",
          "pressed": "../images/button_iconify_clicked.png",
          "pressedActive": "../images/button_iconify_clicked_active.png",
          "toggled": "../images/button_iconify_normal_sticky.png",
          "toggledActive": "../images/button_iconify_normal_active_sticky.png"
        },
        "insets": {
          "bottom": 4,
          "left": 4,
          "right": 4,
          "top": 4
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": false,
        "maxH": 43,
        "maxW": 31,
        "minH": 43,
        "minW": 31,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": 9,
        "tlXP": 0,
        "tlYA": 40,
        "tlYP": 0,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": 40,
        "brXP": 0,
        "brYA": 104,
        "brYP": 0,
        "button": "maximizeRestore",
        "hideWhenMaximized": true,
        "id": "BUTTON_SHADE",
        "images": {
          "hover": "../images/button_shade_hilited.png",
          "hoverActive": "../images/button_shade_hilited_active.png",
          "normal": "../images/button_shade_normal.png",
          "normalActive": "../images/button_shade_normal_active.png",
          "pressed": "../images/button_shade_clicked.png",
          "pressedActive": "../images/button_shade_clicked_active.png",
          "toggled": "../images/button_shade_normal_sticky.png",
          "toggledActive": "../images/button_shade_normal_active_sticky.png"
        },
        "insets": {
          "bottom": 4,
          "left": 4,
          "right": 4,
          "top": 4
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": false,
        "maxH": 21,
        "maxW": 31,
        "minH": 21,
        "minW": 31,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": 9,
        "tlXP": 0,
        "tlYA": 83,
        "tlYP": 0,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": -2,
        "brXP": 1024,
        "brYA": 46,
        "brYP": 0,
        "button": null,
        "hideWhenMaximized": false,
        "id": "FIN",
        "images": {
          "normal": "../images/fin_normal.png",
          "normalActive": "../images/fin_normal_active.png"
        },
        "insets": {
          "bottom": 0,
          "left": 0,
          "right": 258,
          "top": 0
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": true,
        "maxH": 16,
        "maxW": 9999,
        "minH": 16,
        "minW": 0,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": 40,
        "tlXP": 0,
        "tlYA": 30,
        "tlYP": 0,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": -5,
        "brXP": 1024,
        "brYA": 46,
        "brYP": 0,
        "button": null,
        "hideWhenMaximized": false,
        "id": "TITLEBAR",
        "images": {
          "normal": "../images/titlebar_normal.png",
          "normalActive": "../images/titlebar_normal_active.png"
        },
        "insets": {
          "bottom": 40,
          "left": 10,
          "right": 80,
          "top": 14
        },
        "isTitle": true,
        "justification": 0,
        "keepWhenShaded": true,
        "maxH": 46,
        "maxW": 0,
        "minH": 46,
        "minW": 25,
        "padBottom": 17,
        "padLeft": 5,
        "padRight": 20,
        "padTop": 10,
        "text": {
          "colorActive": "#ffffff",
          "colorNormal": "#ffffff",
          "fontIndex": 0,
          "pixelSize": 18,
          "shadow": false,
          "shadowColor": "#000000"
        },
        "tlOrigin": -1,
        "tlXA": 40,
        "tlXP": 0,
        "tlYA": 0,
        "tlYP": 0,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": 40,
        "brXP": 0,
        "brYA": 142,
        "brYP": 0,
        "button": "onAllDesktops",
        "hideWhenMaximized": true,
        "id": "BUTTON_STICK",
        "images": {
          "hover": "../images/button_stick_hilited.png",
          "hoverActive": "../images/button_stick_hilited_active.png",
          "normal": "../images/button_stick_normal.png",
          "normalActive": "../images/button_stick_normal_active.png",
          "pressed": "../images/button_stick_clicked.png",
          "pressedActive": "../images/button_stick_clicked_active.png",
          "toggled": "../images/button_stick_normal_sticky.png",
          "toggledActive": "../images/button_stick_normal_active_sticky.png"
        },
        "insets": {
          "bottom": 4,
          "left": 4,
          "right": 4,
          "top": 4
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": false,
        "maxH": 38,
        "maxW": 31,
        "minH": 38,
        "minW": 31,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": 9,
        "tlXP": 0,
        "tlYA": 104,
        "tlYP": 0,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": 40,
        "brXP": 0,
        "brYA": -6,
        "brYP": 1024,
        "button": null,
        "hideWhenMaximized": true,
        "id": "WIN_SIDE_LEFT",
        "images": {
          "normal": "../images/win_side_left_normal.png",
          "normalActive": "../images/win_side_left_normal_active.png"
        },
        "insets": {
          "bottom": 0,
          "left": 0,
          "right": 0,
          "top": 60
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": false,
        "maxH": 99999,
        "maxW": 31,
        "minH": 0,
        "minW": 31,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": 9,
        "tlXP": 0,
        "tlYA": 142,
        "tlYP": 0,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": 0,
        "brXP": 1024,
        "brYA": -6,
        "brYP": 1024,
        "button": null,
        "hideWhenMaximized": true,
        "id": "WIN_SIDE_RIGHT",
        "images": {
          "normal": "../images/win_side_right_normal.png",
          "normalActive": "../images/win_side_right_normal_active.png"
        },
        "insets": {
          "bottom": 4,
          "left": 4,
          "right": 4,
          "top": 4
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": false,
        "maxH": 99999,
        "maxW": 6,
        "minH": 0,
        "minW": 6,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": -6,
        "tlXP": 1024,
        "tlYA": 46,
        "tlYP": 0,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": 40,
        "brXP": 0,
        "brYA": 0,
        "brYP": 1024,
        "button": null,
        "hideWhenMaximized": true,
        "id": "WIN_CORNER_BL",
        "images": {
          "normal": "../images/win_corner_bl_normal.png",
          "normalActive": "../images/win_corner_bl_normal_active.png"
        },
        "insets": {
          "bottom": 4,
          "left": 4,
          "right": 4,
          "top": 4
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": false,
        "maxH": 6,
        "maxW": 6,
        "minH": 6,
        "minW": 6,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": 34,
        "tlXP": 0,
        "tlYA": -6,
        "tlYP": 1024,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": 0,
        "brXP": 1024,
        "brYA": 0,
        "brYP": 1024,
        "button": null,
        "hideWhenMaximized": true,
        "id": "WIN_CORNER_BR",
        "images": {
          "normal": "../images/win_corner_br_normal.png",
          "normalActive": "../images/win_corner_br_normal_active.png"
        },
        "insets": {
          "bottom": 4,
          "left": 4,
          "right": 4,
          "top": 4
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": false,
        "maxH": 10,
        "maxW": 10,
        "minH": 10,
        "minW": 10,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": -10,
        "tlXP": 1024,
        "tlYA": -10,
        "tlYP": 1024,
        "vertical": false
      },
      {
        "brOrigin": -1,
        "brXA": -6,
        "brXP": 1024,
        "brYA": -6,
        "brYP": 1024,
        "button": null,
        "hideWhenMaximized": true,
        "id": "WIN_BOTTOM",
        "images": {
          "normal": "../images/win_bottom_normal.png",
          "normalActive": "../images/win_bottom_normal_active.png"
        },
        "insets": {
          "bottom": 2,
          "left": 6,
          "right": 6,
          "top": 2
        },
        "isTitle": false,
        "justification": 512,
        "keepWhenShaded": false,
        "maxH": 6,
        "maxW": 99999,
        "minH": 6,
        "minW": 20,
        "padBottom": 0,
        "padLeft": 0,
        "padRight": 0,
        "padTop": 0,
        "text": null,
        "tlOrigin": -1,
        "tlXA": 40,
        "tlXP": 0,
        "tlYA": -6,
        "tlYP": 1024,
        "vertical": false
      }
    ],
    "runtimeVersion": 2,
    "scale": 2
  };
  
  '''
# ---
